# a-note

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  index.html  package-lock.json  package.json  ram-plan.md  scroll-plan.md
.hermes/plans/: 20260516_start-with-windows.md
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  crypto.rs  diagnostics.rs  lib.rs  note.rs  paths.rs  storage.rs  tray.rs  util.rs
src-tauri/tests/: encryption.rs  property.proptest-regressions  property.rs
src/fonts/: fonts.css
this is the reference folder/: Notes.lnk  StickyNote.cfg  sticky-notes.ps1  temp.json
