[package]
name = "notes"
version = "0.1.3"
edition = "2021"

[lib]
name = "sticky_notes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
proptest = "1"
